Fix Java 25 warning on maven build.