@@ -1,2 +1,2 @@
-set MAVEN_OPTS=--sun-misc-unsafe-memory-access=allow
+set MAVEN_OPTS=--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED
 mvn clean install -DskipTests
